--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 Transforming ideas into reality through cutting-edge AI and modern web technologies. 
                 intrested to work in real-time with groups
             </p>
-            <a href="#contact" class="cta-button">Let's Work Together</a>
+            <a href="https://drive.google.com/file/d/1IkwDWTWp6uRKR8OIdNDkwBGgYiLyMEy8/view?usp=drive_link" class="cta-button">My Resume</a>
         </div>
     </section>
 
